# scabra-crm-backend

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.MD  Rocket.toml.example
.cargo/: config.toml
db_modelling/: address.sql  client.sql  db.sql  employee.sql  person.sql  profile.sql  task.sql  user.sql  user_auth_token.sql
migrations/2020-09-01-162217_create_users/: down.sql  up.sql
migrations/2020-09-01-162448_create_articles/: up.sql
migrations/2020-09-11-152026_create_person/: down.sql  up.sql
migrations/2020-09-11-152344_create_user/: down.sql  up.sql
migrations/2020-09-11-152501_create_user_auth_token/: down.sql  up.sql
migrations/2020-09-11-152655_create_address/: down.sql  up.sql
migrations/2020-09-11-152757_create_profile/: down.sql  up.sql
migrations/2020-09-11-152859_create_client/: down.sql  up.sql
migrations/2020-09-15-152316_update_user_auth_token/: down.sql  up.sql
migrations/2020-09-29-101104_create_emplyoee/: down.sql  up.sql
migrations/2020-10-07-090757_create_task/: down.sql  up.sql
migrations/2020-10-12-102135_create_db/: down.sql  up.sql
src/: calendar.rs  lib.rs  main.rs  models.rs  schema.rs
src/db/: address.rs  client.rs  employee.rs  mod.rs  person.rs  profile.rs  task.rs  user.rs  user_auth_token.rs
src/models/: address.rs  calendar.rs  client.rs  employee.rs  mod.rs  person.rs  profile.rs  response.rs  task.rs  user.rs  user_auth_token.rs
src/proxies/: event_proxy.rs  mod.rs  naive_date_form_proxy.rs
src/routes/: address.rs  calendar.rs  client.rs  employee.rs  mod.rs  person.rs  profile.rs  task.rs  user.rs
src/services/: address.rs  calendar.rs  client.rs  cors.rs  employee.rs  mod.rs  person.rs  profile.rs  task.rs  user.rs
