[package]
name = "hprs-crm-backend"
version = "0.1.0"
authors = ["Kamefrede <kamefrede@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv="0.15.0"
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
env_logger = "0.7.1"
rust-crypto = "0.2.36"

[dependencies.postgres]
version = "0.17.5"
features=["with-chrono-0_4"]

[dependencies.serde]
version = "1.0.115"
features = ["derive"]

[dependencies.rocket]
version = "0.4.5"

[dependencies.diesel]
version = "1.4.5"
features = ["postgres", "chrono"]

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json", "diesel_postgres_pool"]
