[package]
name = "scabra-crm-backend"
version = "0.2.0"
authors = ["Kamefrede <kamefrede@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3

[dependencies]
dotenv = "0.15.0"
pretty_env_logger = "0.3"
log = "0.4"
rust-crypto = "0.2.36"
jsonwebtoken = "7.2.0"
serde_json = "1.0.57"
strum = "0.19.2"
strum_macros = "0.19.2"
web_ical = {git = "https://github.com/Kamefrede/web_ical"}
anyhow = "1.0.32"

[dependencies.chrono]
version = "0.4.18"
features = ["serde", "rustc-serialize"]

[dependencies.uuid]
version = "0.8.1"
features = ["serde", "v4"]

[dependencies.postgres]
version = "0.17.5"
features = ["with-chrono-0_4"]

[dependencies.serde]
version = "1.0.115"
features = ["derive"]

[dependencies.rocket]
version = "0.4.5"

[dependencies.diesel]
version = "1.4.5"
features = ["postgres", "chrono"]

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json", "diesel_postgres_pool", "serve"]
