[package]
authors = ["Kamefrede <kamefrede@gmail.com>"]
categories = ["web-programming"]
description = "A simple CRM backend done with Rocket and Diesel(Postgres)"
edition = "2018"
keywords = ["crm", "scabra", "backend", "diesel", "rocket"]
license = "MIT OR Apache-2.0"
name = "scabra-crm-backend"
repository = "https://github.com/Kamefrede/scabra-crm-backend"
version = "0.3.0"
[dependencies]
anyhow = "1.0.32"
dotenv = "0.15.0"
jsonwebtoken = "7.2.0"
log = "0.4"
pretty_env_logger = "0.3"
rust-crypto = "0.2.36"
serde_json = "1.0.57"

[dependencies.chrono]
features = ["serde", "rustc-serialize"]
version = "0.4.18"

[dependencies.diesel]
features = ["postgres", "chrono"]
version = "1.4.5"

[dependencies.postgres]
features = ["with-chrono-0_4"]
version = "0.17.5"

[dependencies.rocket]
version = "0.4.5"

[dependencies.rocket_contrib]
default-features = false
features = ["json", "diesel_postgres_pool", "serve"]
version = "0.4.5"

[dependencies.serde]
features = ["derive"]
version = "1.0.115"

[dependencies.uuid]
features = ["serde", "v4"]
version = "0.8.1"

[dependencies.web_ical]
git = "https://github.com/Kamefrede/web_ical"

[profile]
[profile.release]
opt-level = 3
